--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "seatdata"
+name = "seatdata-sdk"
 version = "0.1.0"
 description = "Official Python SDK for SeatData API"
 readme = "README.md"
